Rewrite test by BDD with Mockito